<resources>
    <string name="app_name">L_12_Guliyev_58377_Mid2</string>
    <string name="app_info">Maharram Guliyev Midterm 2 App</string>
    <string name="your_name">Your Name:</string>
    <string name="your_surname">Your Surname:</string>
    <string name="hint_your_name">your name</string>
    <string name="hint_your_surname">your surname</string>
    <string name="town">Town:</string>
    <string name="save_to_memory">Save to Memory</string>
    <string name="go_to_images">Go to Images</string>
    <string-array name="spinner_array">
        <item>Baku</item>
        <item>Ganja</item>
        <item>Shaki</item>
    </string-array>
    <string name="activity_func">Through image to activity</string>
    <string name="calculator">Calculator</string>
    <string name="memory">Memory</string>
    <string name="temp_converter">Temperature converter</string>
    <string name="from_memory">From memory:</string>
    <string name="to_main">To Main Activity</string>
    <string name="memory_activity">Work with Memory - File System</string>
    <string name="temp">Temperature:</string>
    <string name="convert">Convert</string>
    <string-array name="spinner_array_2">
        <item>Celsius</item>
        <item>Kelvin</item>
        <item>Fahrenheit</item>
    </string-array>
    <string name="celsius">Celsius:</string>
    <string name="kelvin">Kelvin:</string>
    <string name="fahr">Fehrenheit:</string>
</resources>